--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -358,13 +358,91 @@ template {
   display: none;
 }
 
+.content-margins {
+  width: 90%;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 50px;
+  padding: 0 35px;
+  color: #fff;
+  background: #fcae00;
+  border-radius: 25px;
+  border: 0;
+  font-size: 1.6rem;
+  font-weight: 700;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: background-color ease 0.2s;
+  -webkit-appearance: none;
+}
+
+button:hover {
+  background-color: #fbb926;
+  color: #fff;
+}
+
 .results {
   opacity: 0;
-  transform: translateY(-100px);
+  transform: translateY(100px);
   transition: 300ms cubic-bezier(0.1, 0.1, 0.25, 0.9) all;
+  pointer-events: none;
 }
 
 .results.active {
   opacity: 1;
   transform: none;
+  pointer-events: auto;
+}
+
+.results .results-feed {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.giphy-item a {
+  padding: 10px;
+  background-color: white;
+  border-radius: 6px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  min-width: 20%;
+  transition: 300ms cubic-bezier(0.1, 0.1, 0.25, 0.9) all;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
+  position: relative;
+}
+
+.giphy-item a:after {
+  content: "";
+  position: absolute;
+  width: calc(100% - 30px);
+  box-shadow: 0 2px 50px 0 rgba(0, 0, 0, 0.26);
+  height: 95%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: -1;
+}
+
+.giphy-item a img {
+  border-radius: 3px;
+  overflow: hidden;
+}
+
+.giphy-item.active a {
+  background-color: #620ce3;
 }
