--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -370,6 +370,10 @@ header nav ul {
 }
 
 button {
+  cursor: pointer;
+}
+
+.button {
   position: relative;
   align-items: center;
   justify-content: center;
@@ -386,9 +390,10 @@ button {
   cursor: pointer;
   transition: background-color ease 0.2s;
   -webkit-appearance: none;
+  display: inline-block;
 }
 
-button:hover {
+.button:hover {
   background-color: #fbb926;
   color: #fff;
 }
@@ -417,7 +422,7 @@ button:hover {
   }
 }
 
-.giphy-item a {
+.giphy-item button {
   padding: 10px;
   background-color: white;
   border-radius: 6px;
@@ -433,12 +438,12 @@ button:hover {
 }
 
 @media (max-width: 767px) {
-  .giphy-item a {
+  .giphy-item button {
     margin-right: 0px;
   }
 }
 
-.giphy-item a:after {
+.giphy-item button:after {
   content: "";
   position: absolute;
   width: calc(100% - 30px);
@@ -451,14 +456,14 @@ button:hover {
   z-index: -1;
 }
 
-.giphy-item a img {
+.giphy-item button img {
   border-radius: 3px;
   overflow: hidden;
   width: 100%;
   height: auto;
 }
 
-.giphy-item a .svg-holder {
+.giphy-item button .svg-holder {
   position: absolute;
   left: 0;
   top: 0;
@@ -466,7 +471,7 @@ button:hover {
   width: 100%;
 }
 
-.giphy-item a .svg-holder .hearts {
+.giphy-item button .svg-holder .hearts {
   width: 100%;
   position: absolute;
   height: 100%;
@@ -475,7 +480,7 @@ button:hover {
   user-select: none;
 }
 
-.giphy-item a .svg-holder .hearts .heart {
+.giphy-item button .svg-holder .hearts .heart {
   position: absolute;
   height: 15px;
   width: 15px;
@@ -483,17 +488,17 @@ button:hover {
 }
 
 @media (max-width: 767px) {
-  .giphy-item a .svg-holder .hearts .heart {
+  .giphy-item button .svg-holder .hearts .heart {
     height: 20px;
     width: 20px;
   }
 }
 
-.giphy-item a .svg-holder .hearts .heart path {
+.giphy-item button .svg-holder .hearts .heart path {
   fill: white;
 }
 
-.giphy-item.active a {
+.giphy-item.active button {
   background-color: #620ce3;
 }
 
