--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -398,27 +398,27 @@ button {
   color: #fff;
 }
 
-.results {
-  opacity: 0;
-  transform: translateY(100px);
-  transition: 300ms cubic-bezier(0.1, 0.1, 0.25, 0.9) all;
-  pointer-events: none;
-}
-
-.results.active {
-  opacity: 1;
-  transform: none;
-  pointer-events: auto;
-}
-
 .results-feed {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 20px;
+  justify-content: space-around;
+}
+
+.giphy-item {
+  min-width: 15%;
+  min-height: 100px;
+  animation: fadeIn 1s forwards;
+  opacity: 0;
+  transform: translateY(100px);
 }
 
 @media (max-width: 767px) {
   .giphy-item {
-    width: 100%;
+    width: calc(50% - 10px);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 
@@ -461,6 +461,7 @@ button {
   overflow: hidden;
   width: 100%;
   height: auto;
+  display: block;
 }
 
 .giphy-item button .svg-holder {
@@ -503,7 +504,7 @@ button {
 }
 
 .giphy-item.active .svg-holder {
-  animation: fadeIn forwards 2.25s;
+  animation: bgFade forwards 2.25s;
 }
 
 .giphy-item.active .svg-holder .hearts {
@@ -511,7 +512,7 @@ button {
   transition: 2s cubic-bezier(0.1, 0.1, 0.25, 0.9) all 0.2s;
 }
 
-@keyframes fadeIn {
+@keyframes bgFade {
   0% {
     background-color: transparent;
   }
@@ -520,5 +521,16 @@ button {
   }
   100% {
     background-color: transparent;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
   }
 }
