--- a/src/styles/components/_giphyitem.scss
+++ b/src/styles/components/_giphyitem.scss
@@ -1,10 +1,19 @@
 //main:../styles.scss
 
 .giphy-item{
+  min-width: 15%;
+  min-height: 100px;
+  animation: fadeIn 1s forwards;
+  opacity: 0;
+  transform: translateY(100px);
   @media(max-width: 767px){
-    width: 100%;
+    width: calc(50% - 10px);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
   button{
+
     padding: 10px;
     // border: 1px solid rgba(0,0,0,0.2);
     background-color: white;
@@ -38,6 +47,7 @@
       overflow: hidden;
       width: 100%;
       height: auto;
+      display: block;
     }
     .svg-holder{
       position: absolute;
@@ -75,7 +85,7 @@
       background-color: $purple;
     }
     .svg-holder{
-      animation: fadeIn forwards 2.25s;
+      animation: bgFade forwards 2.25s;
       .hearts{
         transform: translateY(-120%);
         transition: 2s cubic-bezier(.10, .10, .25, .90) all 0.2s;
@@ -84,7 +94,7 @@
   }
 }
 
-@keyframes fadeIn{
+@keyframes bgFade{
   0%{
     background-color: transparent;
   }
@@ -93,5 +103,17 @@
   }
   100%{
     background-color: transparent;
+  }
+}
+
+@keyframes fadeIn{
+  0%{
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  100%{
+    opacity: 1;
+    transform: none;
   }
 }
