--- a/src/styles/components/_results.scss
+++ b/src/styles/components/_results.scss
@@ -1,19 +1,20 @@
 //main:../styles.scss
 
-.results{
-  opacity: 0;
-  transform: translateY(100px);
-  transition: 300ms cubic-bezier(.10, .10, .25, .90) all;
-  pointer-events: none;
-  &.active{
-    opacity: 1;
-    transform: none;
-    pointer-events: auto;
-  }
-}
+// .results{
+//   opacity: 0;
+//   transform: translateY(100px);
+//   transition: 300ms cubic-bezier(.10, .10, .25, .90) all;
+//   pointer-events: none;
+//   &.active{
+//     opacity: 1;
+//     transform: none;
+//     pointer-events: auto;
+//   }
+// }
 
 .results-feed{
   display: flex;
   flex-wrap: wrap;
-  // justify-content: space-between;
+  margin-bottom: 20px;
+  justify-content: space-around;
 }
