animations, restruct actions

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,27 +4,111 @@ $purple: #620ce3;
 $teal: #1ee3cf;
 $orange: #fcae00;
 $orangeHover: #fbb926;
+$lato: 'Lato', sans-serif;
+*, body{
+  font-family: $lato;
+}
+
+
+
+body{
+  background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
+  background-position: top;
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
+
+header{
+  nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 5;
+    background-color: white;
+    padding: 0 20px;
+    overflow: hidden;
+    ul{
+      display: flex;
+      li{
+        // border-radius: 6px 6px 0 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        a{
+          padding: 10px 30px;
+
+          text-transform: uppercase;
+          border: 1px solid rgba(0,0,0,0.3);
+          border-bottom: 0px;
+          text-decoration: underline;
+          position: relative;
+          background-color: rgba(0,0,0,0.05);
+          border-radius: 5px 5px 0 0;
+          transition: ease 300ms background-color;
+          &:hover{
+            background-color: rgba(0,0,0,0.03);
+            text-decoration: none;
+          }
+          &.active{
+            z-index: 1;
+            font-weight: 900;
+            text-decoration: none;
+            border-bottom: 0px;
+            position: relative;
+            background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
+            background-position: top left;
+            background-size: 100vw 100vh;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+
+            &:before{
+              content: '';
+              position: absolute;
+              top: calc(100% - 1px);
+              left: 100%;
+              width: 100vw;
+              border-bottom: 1px solid rgba(0,0,0,0.3);
+              z-index: -1;
+            }
+            &:after{
+              content: '';
+              position: absolute;
+              top: calc(100% - 1px);
+              right: 100%;
+              width: 100vw;
+              border-bottom: 1px solid rgba(0,0,0,0.3);
+              z-index: -1;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+h1{
+  font-size: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+h2{
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+em{
+  font-style: italic;
+}
 
 
 .content-margins{
   width: 90%;
   max-width: 1440px;
   margin: 0 auto;
-}
-
-
-header{
-  nav{
-    ul{
-      display: flex;
-      justify-content: space-between;
-      li{
-        &.active{
-
-        }
-      }
-    }
-  }
 }
 
 button{
@@ -48,7 +132,8 @@ button{
   cursor: pointer;
   transition: background-color ease 0.2s;
   -webkit-appearance: none;
-  display: inline-block;
+  display: flex;
+  text-decoration: none;
   &:hover{
     background-color: $orangeHover;
     color: #fff;
