--- a/src/styles/components/_giphyitem.scss
+++ b/src/styles/components/_giphyitem.scss
@@ -85,11 +85,16 @@
       background-color: $purple;
     }
     .svg-holder{
-      animation: bgFade forwards 2.25s;
+
       .hearts{
         transform: translateY(-120%);
         transition: 2s cubic-bezier(.10, .10, .25, .90) all 0.2s;
       }
+    }
+  }
+  &.clicked{
+    .svg-holder{
+      animation: bgFade forwards 2.25s;
     }
   }
 }
