--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -358,15 +358,110 @@ template {
   display: none;
 }
 
-.content-margins {
-  width: 90%;
-  max-width: 1440px;
-  margin: 0 auto;
+*, body {
+  font-family: "Lato", sans-serif;
+}
+
+body {
+  background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
+  background-position: top;
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+header nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
+  background-color: white;
+  padding: 0 20px;
+  overflow: hidden;
 }
 
 header nav ul {
   display: flex;
-  justify-content: space-between;
+}
+
+header nav ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header nav ul li a {
+  padding: 10px 30px;
+  text-transform: uppercase;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 0px;
+  text-decoration: underline;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 5px 5px 0 0;
+  transition: ease 300ms background-color;
+}
+
+header nav ul li a:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+  text-decoration: none;
+}
+
+header nav ul li a.active {
+  z-index: 1;
+  font-weight: 900;
+  text-decoration: none;
+  border-bottom: 0px;
+  position: relative;
+  background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
+  background-position: top left;
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+header nav ul li a.active:before {
+  content: '';
+  position: absolute;
+  top: calc(100% - 1px);
+  left: 100%;
+  width: 100vw;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
+
+header nav ul li a.active:after {
+  content: '';
+  position: absolute;
+  top: calc(100% - 1px);
+  right: 100%;
+  width: 100vw;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+h2 {
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+em {
+  font-style: italic;
+}
+
+.content-margins {
+  width: 90%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 button {
@@ -390,12 +485,17 @@ button {
   cursor: pointer;
   transition: background-color ease 0.2s;
   -webkit-appearance: none;
-  display: inline-block;
+  display: flex;
+  text-decoration: none;
 }
 
 .button:hover {
   background-color: #fbb926;
   color: #fff;
+}
+
+.results {
+  position: relative;
 }
 
 .results-feed {
@@ -503,13 +603,13 @@ button {
   background-color: #620ce3;
 }
 
-.giphy-item.active .svg-holder {
-  animation: bgFade forwards 2.25s;
-}
-
 .giphy-item.active .svg-holder .hearts {
   transform: translateY(-120%);
   transition: 2s cubic-bezier(0.1, 0.1, 0.25, 0.9) all 0.2s;
+}
+
+.giphy-item.clicked .svg-holder {
+  animation: bgFade forwards 2.25s;
 }
 
 @keyframes bgFade {
@@ -533,4 +633,71 @@ button {
     opacity: 1;
     transform: none;
   }
+}
+
+.search-form {
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 300ms cubic-bezier(0.1, 0.1, 0.25, 0.9) all;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  z-index: 1;
+  padding-top: 60px;
+  margin-bottom: 30px;
+}
+
+.search-form .search-form-inner {
+  width: 70vw;
+}
+
+@media (max-width: 767px) {
+  .search-form .search-form-inner {
+    width: 100%;
+  }
+}
+
+#search-container.active .search-form {
+  height: 175px;
+}
+
+form {
+  width: 100%;
+  display: flex;
+}
+
+form input[type='search'] {
+  box-shadow: 0 7px 16px -10px rgba(0, 0, 0, 0.16);
+  border: solid 1px #dbdbdb;
+  border-radius: 6px;
+  padding: 15px;
+  margin-right: 20px;
+  font-size: 16px;
+  width: 100%;
+}
+
+#favorites {
+  padding-top: 60px;
+}
+
+#favorites h1 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.no-favorites {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.no-favorites h2 {
+  font-style: italic;
+  margin-bottom: 20px;
+}
+
+.no-favorites img {
+  margin-bottom: 30px;
 }
