--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -332,3 +332,5 @@ template {
 @import 'components/results';
 @import 'components/giphyitem';
 @import 'components/form';
+@import 'components/search';
+@import 'components/favorites';
