--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,7 +14,7 @@ $lato: 'Lato', sans-serif;
 body{
   background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
   background-position: top;
-  background-size: 100vw 100vh;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 
@@ -39,7 +39,7 @@ header{
         align-items: center;
         a{
           padding: 10px 30px;
-
+          font-size: 14px;
           text-transform: uppercase;
           border: 1px solid rgba(0,0,0,0.3);
           border-bottom: 0px;
@@ -94,11 +94,17 @@ h1{
   font-weight: 900;
   text-transform: uppercase;
   margin-bottom: 15px;
+  @media (max-width: 767px){
+    font-size: 30px;
+  }
 }
 h2{
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
+  @media (max-width: 767px){
+    font-size: 22px;
+  }
 }
 em{
   font-style: italic;
