--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -11,9 +11,12 @@
   top:0;
   z-index: 1;
   padding-top: 60px;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
   .search-form-inner{
     width: 70vw;
+    em{
+      color: $teal;
+    }
     @media(max-width: 767px){
       width: 100%;
     }
@@ -24,6 +27,7 @@
   &.active{
     .search-form{
       height: 175px;
+      background-color: rgba(255,255,255,0.9);
     }
   }
 }
