--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -365,7 +365,7 @@ template {
 body {
   background-image: url(../assets/gray-bg-pricing-section@2x.jpg);
   background-position: top;
-  background-size: 100vw 100vh;
+  background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -393,6 +393,7 @@ header nav ul li {
 
 header nav ul li a {
   padding: 10px 30px;
+  font-size: 14px;
   text-transform: uppercase;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom: 0px;
@@ -448,10 +449,22 @@ h1 {
   margin-bottom: 15px;
 }
 
+@media (max-width: 767px) {
+  h1 {
+    font-size: 30px;
+  }
+}
+
 h2 {
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  h2 {
+    font-size: 22px;
+  }
 }
 
 em {
@@ -646,11 +659,15 @@ button {
   top: 0;
   z-index: 1;
   padding-top: 60px;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 .search-form .search-form-inner {
   width: 70vw;
+}
+
+.search-form .search-form-inner em {
+  color: #1ee3cf;
 }
 
 @media (max-width: 767px) {
@@ -661,6 +678,7 @@ button {
 
 #search-container.active .search-form {
   height: 175px;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 form {
