--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -106,6 +106,10 @@ h2{
     font-size: 22px;
   }
 }
+h5{
+  font-size: 13px;
+  margin-bottom: 10px;
+}
 em{
   font-style: italic;
 }
@@ -144,4 +148,8 @@ button{
     background-color: $orangeHover;
     color: #fff;
   }
+}
+
+.section-header{
+  margin-bottom: 20px;
 }
