--- a/src/styles/components/_favorites.scss
+++ b/src/styles/components/_favorites.scss
@@ -4,7 +4,10 @@
   padding-top: 60px;
   h1{
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+  }
+  h5{
+    text-align: center;
   }
 }
 
