--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -467,6 +467,11 @@ h2 {
   }
 }
 
+h5 {
+  font-size: 13px;
+  margin-bottom: 10px;
+}
+
 em {
   font-style: italic;
 }
@@ -505,6 +510,10 @@ button {
 .button:hover {
   background-color: #fbb926;
   color: #fff;
+}
+
+.section-header {
+  margin-bottom: 20px;
 }
 
 .results {
@@ -702,7 +711,11 @@ form input[type='search'] {
 
 #favorites h1 {
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+#favorites h5 {
+  text-align: center;
 }
 
 .no-favorites {
