--- a/src/styles/components/_giphyitem.scss
+++ b/src/styles/components/_giphyitem.scss
@@ -6,11 +6,17 @@
   animation: fadeIn 1s forwards;
   opacity: 0;
   transform: translateY(100px);
+  margin-bottom: 20px;
+  margin-right: 20px;
   @media(max-width: 767px){
     width: calc(50% - 10px);
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-right: 0px;
+  }
+  @media(max-width: 650px){
+    width: 100%;
   }
   button{
 
@@ -18,17 +24,14 @@
     // border: 1px solid rgba(0,0,0,0.2);
     background-color: white;
     border-radius: 6px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    display: flex;
-    flex-direction: column;
     min-width: 20%;
     transition: 300ms cubic-bezier(.10, .10, .25, .90) all;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.08);
     position: relative;
     overflow: hidden;
-    @media(max-width: 767px){
-      margin-right: 0px;
+
+    @media(max-width: 650px){
+      width: 100%;
     }
     &:after{
       content: "";
@@ -48,6 +51,7 @@
       width: 100%;
       height: auto;
       display: block;
+      object-fit: contain;
     }
     .svg-holder{
       position: absolute;
