--- a/src/styles/components/_results.scss
+++ b/src/styles/components/_results.scss
@@ -17,3 +17,10 @@
   margin-bottom: 20px;
   justify-content: space-around;
 }
+
+.no-results{
+  padding: 20px 0;
+  h2{
+    text-align: center;
+  }
+}
