--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -402,6 +402,7 @@ header nav ul li a {
   background-color: rgba(0, 0, 0, 0.05);
   border-radius: 5px 5px 0 0;
   transition: ease 300ms background-color;
+  color: #620ce3;
 }
 
 header nav ul li a:hover {
@@ -446,7 +447,8 @@ h1 {
   font-size: 50px;
   font-weight: 900;
   text-transform: uppercase;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  line-height: 1.3em;
 }
 
 @media (max-width: 767px) {
@@ -459,6 +461,7 @@ h2 {
   font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
+  line-height: 1.3em;
 }
 
 @media (max-width: 767px) {
@@ -516,6 +519,14 @@ button {
   margin-bottom: 20px;
 }
 
+.purple {
+  color: #620ce3;
+}
+
+.teal {
+  color: #1ee3cf;
+}
+
 .results {
   position: relative;
 }
@@ -527,12 +538,22 @@ button {
   justify-content: space-around;
 }
 
+.no-results {
+  padding: 20px 0;
+}
+
+.no-results h2 {
+  text-align: center;
+}
+
 .giphy-item {
   min-width: 15%;
   min-height: 100px;
   animation: fadeIn 1s forwards;
   opacity: 0;
   transform: translateY(100px);
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 @media (max-width: 767px) {
@@ -541,6 +562,13 @@ button {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-right: 0px;
+  }
+}
+
+@media (max-width: 650px) {
+  .giphy-item {
+    width: 100%;
   }
 }
 
@@ -548,10 +576,6 @@ button {
   padding: 10px;
   background-color: white;
   border-radius: 6px;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
   min-width: 20%;
   transition: 300ms cubic-bezier(0.1, 0.1, 0.25, 0.9) all;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
@@ -559,9 +583,9 @@ button {
   overflow: hidden;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 650px) {
   .giphy-item button {
-    margin-right: 0px;
+    width: 100%;
   }
 }
 
@@ -584,6 +608,7 @@ button {
   width: 100%;
   height: auto;
   display: block;
+  object-fit: contain;
 }
 
 .giphy-item button .svg-holder {
@@ -685,6 +710,28 @@ button {
   }
 }
 
+.search-form h1 {
+  margin-bottom: 0px;
+  font-weight: 100;
+}
+
+.search-form h1 span {
+  font-weight: 900;
+}
+
+.search-form h6 {
+  margin-bottom: 10px;
+}
+
+#search-container.active h1 {
+  font-weight: 900;
+}
+
+#search-container.active h1 em {
+  font-weight: 100;
+  word-break: break-all;
+}
+
 #search-container.active .search-form {
   height: 175px;
   background-color: rgba(255, 255, 255, 0.9);
@@ -695,7 +742,7 @@ form {
   display: flex;
 }
 
-form input[type='search'] {
+form input[type='text'] {
   box-shadow: 0 7px 16px -10px rgba(0, 0, 0, 0.16);
   border: solid 1px #dbdbdb;
   border-radius: 6px;
@@ -703,6 +750,34 @@ form input[type='search'] {
   margin-right: 20px;
   font-size: 16px;
   width: 100%;
+}
+
+.loading-text {
+  font-size: 18px;
+  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  animation: animateLoad infinite 1s;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 900;
+  margin: 20px 0 30px 0;
+  color: #620ce3;
+}
+
+@keyframes animateLoad {
+  0% {
+    opacity: 1;
+    letter-spacing: 1px;
+  }
+  100% {
+    opacity: 0;
+    letter-spacing: 15px;
+  }
+}
+
+#results {
+  padding-top: 20px;
 }
 
 #favorites {
